# personalDM

./: .gitignore  README.md  play.bat
src/backend/: .branch-marker  alembic.ini  cli.py  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: .gitkeep  293b3517b6ac_initial_schema.py  7f4b8d2c91aa_canon_provenance_and_actor.py  c1a2b3c4d5e6_playable_debugger_foundation.py  d2b3c4d5e6f7_initial_world_state.py  d2e3f4a5b6c7_initial_world_snapshot.py  d2e3f4a5b6c7_initial_world_state.py
src/backend/app/: config.py  main.py
src/backend/app/api/: archive.py  campaigns.py  (+6 more)
src/backend/tests/: conftest.py  run_ci_mock_simulation.py  run_ci_mock_simulation_fixed.py  run_ci_mock_simulation_v3.py  run_persistent_simulation.py  run_realistic_simulation.py  run_realistic_simulation_v2.py  run_realistic_simulation_v3.py  run_realistic_simulation_v4.py  run_scale_simulation.py  simulation_quality_controls.py  simulation_quality_transport_fix.py  simulation_scenario.py  test_campaign.py  test_canon_replay_roundtrip.py  test_canon_safety_fixes.py  test_canon_semantics.py  test_canon_versioning.py  test_context.py  test_full_canon_replay.py  test_llm_provider_resilience.py  test_memory_scribe_aliases.py  test_memory_scribe_guard.py  test_narrator_stability.py  test_playable_debugger_foundation.py  test_post_turn_scheduling.py  test_proposals.py  test_provider_and_scribe.py  test_role_model_router.py  test_simulation_director.py  test_simulation_quality_controls.py  test_thesis_curator.py  test_thesis_curator_lifecycle.py  test_turns.py  test_world_state.py
(+104 files in other folders)
